5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1602_2894.log
== TEST (2019-03-20 18:21:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("20"))

# Calculo do valor a ser pago, incluindo o frete:
total = 205

# Impressao do valor total:
print(205)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(205)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("20"))
print = float(input("20*8"))+ float(input("45"))
# Calculo do valor a ser pago, incluindo o frete:
total = 205

# Impressao do valor total:
print(205)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print = float(input())+ float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:23:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input("20"))
print = float(input("20*8"))+ float(input("45"))
# Calculo do valor a ser pago, incluindo o frete:
total = 205

# Impressao do valor total:
print(205)
-- EXECUTION TIME:
0.277747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 6, in <module>
    print = float(input())+ float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:37:56) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
# Calculo do valor a ser pago, incluindo o frete:
total = (A*B + C)
A = 20
B = 8
C = 45,00
# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:38:06) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
# Calculo do valor a ser pago, incluindo o frete:
total = (A*B + C)
A = 20
B = 8
C = 45,00
# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.146722
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:39:32) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20
B = 8
C = 45,00
total = A*B + C
# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:39:38) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20
B = 8
C = 45,00
total = A*B + C
# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.130609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:39:52) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20
B = 8
C = 45,00
total = A*B + C
print(total)
-- EXECUTION TIME:
0.178331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:40:06) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20
B = 8
C = 45.00
total = A*B + C
print(total)
-- EXECUTION TIME:
0.171048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:41:17) 
-- CODE:

A = float(input("valor unitário do jogo")
B = float(input("quantidade de jogos")
C = float(input("valor do frete")
A = 20
B = 8
C = 45.00
total = A*B + C
print(total)
-- EXECUTION TIME:
0.215298
-- ERROR:
  File "/home/codebench/codes/1602/2894/main.py", line 3
    B = float(input()
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:42:29) 
-- CODE:

A = float(input("valor unitário do jogo"))
B = float(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20
B = 8
C = float (input(45,00))
total = A*B + C
print(total)
-- EXECUTION TIME:
0.134156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 3, in <module>
    B = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:53:48) 
-- CODE:
A = float(input("valor unitário do jogo"))
B = int(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20.00
B = 8
C = 45.00
total = A*B + C
print(total)
-- EXECUTION TIME:
0.150112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    B = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:54:56) 
-- CODE:
A = float(input("valor unitário do jogo"))
B = int(input("quantidade de jogos"))
C = float(input("valor do frete"))
A = 20.00
B = 8
C = 45.00
total = A*B + C
print (total)
-- EXECUTION TIME:
0.128582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    B = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:58:01) 
-- CODE:
var1 = float(input("valor unitário do jogo"))
var2 = int(input("quantidade de jogos"))
var3 = float(input("valor do frete"))
var1 = 20.00
var2 = 8
var3 = 45.00
total = var1*var2 + var3
print(total)
-- EXECUTION TIME:
0.14189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    var2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:05:14) 
-- CODE:
var1 = float(input("valor unitário do jogo:"))
var2 = int(input("quantidade de jogos:"))
var3 = float(input("valor do frete:"))

var3 = 45.00
total = var1*var2 + var3
print(total)
-- EXECUTION TIME:
0.128376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    var2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:07:24) 
-- CODE:
var1 = float(input("valor unitário do jogo:"))
var2 = int(input("quantidade de jogos:"))
var3 = float(input("valor do frete:"))
var1 = 20.00
var2 = 8
var3 = 45.00
total = var1*var2 + var3
print(total)
-- EXECUTION TIME:
0.151006
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    var2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:08:44) 
-- CODE:
var1 = float(input("valor unitário do jogo:"))
var2 = int(input("quantidade de jogos:"))
var3 = float(input("valor do frete:"))
var1 = 20.00
var2 = 8
var3 = 45.00
total = var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.178088
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    var2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 22:09:17) 
-- CODE:
var1 = float(input("valor unitário do jogo"))
var2 = int(input("quantidade de jogos"))
var3 = float(input("valor do frete"))
var1 = 20.00
var2 = 8
var3 = 45.00
total = var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.181919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 2, in <module>
    var2 = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:28:34) 
-- CODE:
a = float(input("valor unitário"))
b = int(input("quantidade de jogos"))
c = float(input("valor do frete"))


total = a * 8 + 45
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:28:59) 
-- CODE:
a = float(input("valor unitário"))
b = int(input("quantidade de jogos"))
c = float(input("valor do frete"))


total = a * 8 + 45.00
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 22:29:36) 
-- CODE:
a = float(input("valor unitário"))
b = int(input("quantidade de jogos"))
c = float(input("valor do frete"))


total = a * b + c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:10:34) 
-- CODE:
a = float(input("valor unitário"))
b = int(input("quantidade de jogos"))
c = float(input("valor do frete"))


total = a * b + c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:04:39) 
-- CODE:
a = float(input("valor unitário"))
b = int(input("8"))
c = float(input("45.00"))
total = (a * b) + c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:04:46) 
-- CODE:
a = float(input("valor unitário"))
b = int(input("8"))
c = float(input("45.00"))
total = (a * b) + c
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:05:17) 
-- CODE:
a = float(input("valor unitário"))
b = 8
c = 45
total = (a * b) + c
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:05:49) 
-- CODE:
a = 20
b = 8
c = 45
total = (a * b) + c
print(total)
-- OUTPUT:
205
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:05:54) 
-- CODE:
a = 20
b = 8
c = 45
total = (a * b) + c
print(total)
-- EXECUTION TIME:
0.217846
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
205
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
205
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
205
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:07:01) 
-- CODE:
a = float(input("valor unitário"))

a = 20
b = 8
c = 45
total = (a * b) + c
print(total)
-- OUTPUT:
205
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:07:16) 
-- CODE:
a = float(input("valor unitário"))

b = 8
c = 45
total = (a * b) + c
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:07:21) 
-- CODE:
a = float(input("valor unitário"))

b = 8
c = 45
total = (a * b) + c
print(total)
-- EXECUTION TIME:
0.169239
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
